test/Fail/Issue3744.err
Issue3744.agda:18.12-13: error: [AbstractConstructorNotInScope]
Constructor d is abstract, thus, not in scope here
when checking that the expression d has type D
